# molecular-canvas

./: Cargo.toml  flake.nix
src/: application.rs  bounds.rs  canvas.rs  main.rs  molecule.rs  toolbar.rs
src/canvas/: event_handler.rs  selection.rs  state.rs
src/molecule/: atom.rs  atom_position.rs  bond.rs  error.rs  id.rs  molecule_position.rs
